--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
   <style>
+
     html, body {
       height: 100%;
       margin: 0;
@@ -16,7 +17,11 @@
       color: #fff;
       overflow-x: hidden;
       position: relative;
+      scroll-behavior: smooth;
+      overscroll-behavior-y: none;
+      touch-action: manipulation;
     }
+
     .background-animation {
       position: fixed;
       top: 0;
@@ -27,6 +32,7 @@
       overflow: hidden;
       pointer-events: none;
     }
+
     .background-animation dotlottie-player {
       width: 100%;
       height: 100%;
@@ -78,22 +84,18 @@
     }
 
     main {
-      padding: 5rem 2rem 2rem 2rem;
+      padding: 0rem 2rem 10rem 2rem;
       max-width: 1200px;
       margin: auto;
       position: relative;
       z-index: 1;
     }
-    .sub-header {
-      text-align: center;
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-      opacity: 0.9;
-    }
+
     .section-header {
       text-align: left;
       font-size: 1.8rem;
-      margin: 2rem 0 1rem 0;
+      padding: 3rem 0rem 1rem 0rem;
+      margin: 1rem;
       font-weight: 700;
     }
     .projects-grid {
@@ -255,6 +257,10 @@
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
 
+    .section-header {
+      text-align: center;
+    }
+
     .carousel, .carousel img {
       height: 200px;
     }
@@ -413,11 +419,8 @@
   </div>
 </header>
 
-<main>
-  <p class="sub-header">
-    A portfolio of projects highlighting my experience in RTL design, FPGA systems, embedded engineering, machine learning, and automation.  </p>
-
-  <h2 class="section-header">RTL / FPGA / Semiconductor Projects</h2>
+<main>  
+  <h2 class="section-header">RTL & FPGA Design</h2>
   <div class="projects-grid">
     <div class="project-card fade-in" onclick="openModal(0)">
       <div class="carousel">
@@ -451,7 +454,7 @@
     </div>
   </div>
 
-  <h2 class="section-header">Applied Engineering Projects</h2>
+  <h2 class="section-header">Applied Engineering</h2>
   <div class="projects-grid">
     <div class="project-card fade-in" onclick="openModal(4)">
       <div class="carousel">
@@ -475,11 +478,11 @@
         <img src="images/up.jpg" class="active">
         <img src="images/waveform_up.png">
       </div>
-      <h3>Keyboard USART Pi</h3>
+      <h3>Keyboard Synthesizer (USART)</h3>
     </div>
   </div>
 
-  <h2 class="section-header">Machine Learning Projects</h2>
+  <h2 class="section-header">Machine Learning</h2>
   <div class="projects-grid">
     <div class="project-card fade-in" onclick="openModal(7)">
       <div class="carousel">
@@ -496,7 +499,7 @@
     </div>
   </div>
 
-  <h2 class="section-header">Software & Automation Projects</h2>
+  <h2 class="section-header">Software & Automation</h2>
   <div class="projects-grid">
     <div class="project-card fade-in" onclick="openModal(9)">
       <div class="carousel">
@@ -546,7 +549,7 @@
       subheader: "(Course Project — Spring 2023)",
       desc: `I designed, simulated, and implemented a custom 32-bit MIPS-like microprocessor in VHDL, including a full CPU datapath, ALU, memory module, and memory-mapped I/O. The project covered instruction fetch, decode, and execute cycles for R-type, I-type, and J-type instructions, with full support for branching and jumping. The processor was validated through comprehensive testbenches and synthesized on FPGA hardware.`,
       skills: "VHDL, CPU Architecture, RTL Design, FSM Controller Design, FPGA Prototyping",
-      image: "images/mips_project_2.png"
+      image: "images/mips_project_2.PNG"
     },
     {
       title: "SoC Design for Autonomous Car",
@@ -595,7 +598,7 @@
       subheader: "(Machine Learning Project — Spring 2024)",
       desc: `I built a flower species classifier using TensorFlow and transfer learning with the InceptionV3 architecture, achieving near 100% accuracy on a 10-class flower dataset. Techniques included model fine-tuning, hyperparameter optimization, and image data augmentation to maximize performance.`,
       skills: "Python, TensorFlow, Deep Learning, Transfer Learning, Image Classification",
-      image: "images/flower_id.png"
+      image: "images/flower_id.PNG"
     },
     {
       title: "API Automation Tools (Python Bots)",
