--- a/contact.html
+++ b/contact.html
@@ -6,315 +6,119 @@
   <title>Contact | Justin Coppola</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+  <link rel="stylesheet" href="style.css">
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom, #FA4616 0%, #FA4616 35%, #FF6D3F 50%, #0021A5 100%);
-      background-attachment: fixed;
-      color: #fff;
-      overflow-x: hidden;
-      position: relative;
-      scroll-behavior: smooth;
-      overscroll-behavior: none;
-    }
 
-    .background-animation {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-      overflow: hidden;
-      pointer-events: none;
-    }
+  main {
+    padding: 5rem 2rem 5rem 2rem;
+    max-width: 1200px;
+    margin: auto;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
 
-    .background-animation dotlottie-player {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      opacity: 0.15;
-    }
+  .contact-card {
+    background: rgba(255, 255, 255, 0.97);
+    color: #000;
+    padding: 2rem 2.5rem;
+    border-radius: 15px;
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
+    max-width: 900px;
+    width: 100%;
+    text-align: center;
+    transition: transform 0.3s;
+  }
 
-    header {
-      background: linear-gradient(to right, #001b7a 0%, #0021A5 50%, #0038D1 100%);
-      padding: 1rem;
-      text-align: center;
-      position: relative;
-      z-index: 1;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      border-bottom: 2px solid rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(6px);
-    }
+  .contact-card:hover {
+    transform: translateY(-5px);
+  }
 
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-      font-weight: 700;
-    }
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1.5rem;
+  }
 
-    header h1::after {
-      content: "";
-      display: block;
-      margin: 0.4rem auto 0;
-      width: 150px;
-      height: 3px;
-      background: #FA4616;
-      border-radius: 999px;
-      opacity: 0.8;
-    }
+  input, textarea {
+    padding: 0.75rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+  }
 
-    nav {
-      margin-top: 0.5rem;
-    }
+  button {
+    background-color: #FA4616;
+    color: white;
+    padding: 0.75rem;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
 
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-weight: 500;
-    }
+  button:hover {
+    background-color: #cc370f;
+  }
 
-    nav a:hover {
-      color: #FFCC00;
-    }
+  a.email-link {
+    color: #0021A5;
+    font-weight: bold;
+    text-decoration: underline;
+  }
 
-    main {
-      padding: 5rem 2rem 2rem 2rem;
-      max-width: 1200px;
-      margin: auto;
-      position: relative;
-      z-index: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
+  @media (max-width: 768px) {
 
     .contact-card {
-      background: rgba(255, 255, 255, 0.97);
-      color: #000;
-      padding: 2rem 2.5rem;
-      border-radius: 15px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);
-      max-width: 900px;
-      width: 100%;
-      text-align: center;
-      transition: transform 0.3s;
+      padding: 1.5rem;
+      max-width: 90%;
     }
-
-    .contact-card:hover {
-      transform: translateY(-5px);
+    .modal-content {
+      width: 90%;
+      max-width: 400px;
+      padding: 1rem;
+      font-size: 0.9rem;
     }
+  }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-top: 1.5rem;
-    }
+  .fade-in {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+  }
 
-    input, textarea {
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-
-    button {
-      background-color: #FA4616;
-      color: white;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #cc370f;
-    }
-
-    a.email-link {
-      color: #0021A5;
-      font-weight: bold;
-      text-decoration: underline;
-    }
-
-    @media (min-width: 769px) {
-      header h1 {
-        padding: 0rem 0rem 1rem 0rem; /* TOP RIGHT BOTTOM LEFT */
-      }
-      .nav-links a {
-        color: white;
-        text-decoration: none;
-        font-weight: 500;
-        transition: color 0.3s ease;
-        padding: 1rem 3rem; /* Top/Bottom: 1.5rem, Left/Right: 1rem */
-        width: 100%;
-        text-align: center;
-      }
-
-      .nav-links a:hover {
-        color: #FF5349;
-      }
-
-      .menu-toggle {
-        display: none;
-      }
-    }
-
-    @media (max-width: 768px) {
-
-      .contact-card {
-        padding: 1.5rem;
-        max-width: 90%;
-      }
-      .modal-content {
-        width: 90%;
-        max-width: 400px;
-        padding: 1rem;
-        font-size: 0.9rem;
-      }
-
-        /* Navigation Adjustments */
-        nav {
-          margin-top: 0.5rem;
-        }
-
-        header {
-          background: rgba(0, 33, 165, 0.9);
-          height: 70px;
-          position: relative;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          z-index: 10;
-        }
-
-        .header-container {
-          width: 100%;
-          max-width: 1200px;
-          position: relative;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        }
-
-        .menu-toggle {
-          position: absolute;
-          top: 47%;
-          left: 0.5rem;
-          transform: translateY(-50%);
-          font-size: 2rem;
-          color: #fff;
-          cursor: pointer;
-          z-index: 20;
-        }
-
-        h1 {
-          font-size: 1.8rem;
-          font-weight: 700;
-          color: white;
-          margin: 0;
-        }
-
-        /* Mobile Dropdown Menu */
-        .nav-links {
-          position: absolute;
-          top: 100%;
-          left: 0;
-          right: 0;
-          margin: 0 auto;
-          width: 75%;
-          background: rgba(0, 33, 165, 0.7);
-          backdrop-filter: blur(6px);
-          border-radius: 15px;
-          box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          overflow: hidden;
-          max-height: 0;
-          opacity: 0;
-          transition: max-height 0.5s ease, opacity 0.5s ease;
-          z-index: 5;
-        }
-
-        .nav-links.active {
-          max-height: 500px;
-          opacity: 1;
-        }
-
-        .nav-links a {
-          padding: 1rem 1rem;
-          width: 100%;
-          text-align: center;
-          text-decoration: none;
-          color: white;
-          font-weight: 500;
-          border-top: 1px solid rgba(255, 255, 255, 0.15);
-          transition: color 0.3s ease;
-        }
-
-        .nav-links a:first-child {
-          border-top: none;
-        }
-
-        .nav-links a:hover {
-          color: #FF5349;
-        }
-      }
-
-      @keyframes fadeUp {
-          from {
-            opacity: 0;
-            transform: translateY(30px);
-          }
-          to {
-            opacity: 1;
-            transform: translateY(0);
-          }
-        }
-
-        .fade-in {
-          opacity: 0;
-          transform: translateY(30px);
-          transition: opacity 0.8s ease, transform 0.8s ease;
-        }
-
-        /* when it comes into view */
-        .appear {
-          opacity: 1;
-          transform: translateY(0);
-          animation: fadeUp 0.8s ease-out forwards;
-        }
-
+  /* when it comes into view */
+  .appear {
+    opacity: 1;
+    transform: translateY(0);
+    animation: fadeUp 0.8s ease-out forwards;
+  }
 
   </style>
 </head>
 
 <body>
 
-<!-- Background animation -->
-<div class="background-animation">
-  <dotlottie-player 
-    src="https://lottie.host/7f862c30-c5ec-4829-a248-895fbce816c2/mRheNRO0yJ.lottie" 
-    background="transparent" 
-    speed="1" 
-    loop autoplay>
-  </dotlottie-player>
-</div>
+  <div class="background-animation rotated-mobile-animation">
+    <dotlottie-player 
+      src="https://lottie.host/7f862c30-c5ec-4829-a248-895fbce816c2/mRheNRO0yJ.lottie" 
+      background="transparent" 
+      speed="1" 
+      loop autoplay>
+    </dotlottie-player>
+  </div>  
 
 <header>
   <div class="header-container">
     <div class="menu-toggle" onclick="toggleMenu()">
       <span id="menu-icon">☰</span>
     </div>
-    <h1>Justin Coppola</h1>
+    <h1>Contact</h1>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
