--- a/projects.html
+++ b/projects.html
@@ -6,396 +6,197 @@
   <title>Projects | Justin Coppola</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+  <link rel="stylesheet" href="style.css">
   <style>
 
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to bottom, #FA4616 0%, #FA4616 35%, #FF6D3F 50%, #0021A5 100%);
-      background-attachment: fixed;
-      color: #fff;
-      overflow-x: hidden;
-      position: relative;
-      scroll-behavior: smooth;
-      overscroll-behavior-y: none;
-      touch-action: manipulation;
-    }
+  main {
+    padding: 0rem 2rem 10rem 2rem;
+    max-width: 1200px;
+    margin: auto;
+    position: relative;
+    z-index: 1;
+  }
 
-    .background-animation {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-      overflow: hidden;
-      pointer-events: none;
-    }
+  .section-header {
+    text-align: left;
+    font-size: 1.8rem;
+    padding: 3rem 0rem 1rem 0rem;
+    margin: 1rem;
+    font-weight: 700;
+  }
+  .projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    gap: 2rem;
+  }
+  .project-card {
+    background: #ffffff;
+    color: #000;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    position: relative;
+  }
+  .project-card:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+  }
+  .carousel {
+    position: relative;
+    width: 100%;
+    height: 350px; /* 🔥 made carousel taller */
+    overflow: hidden;
+  }
+  .carousel img {
+    width: 100%;
+    height: 350px; /* 🔥 match image height */
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+  .carousel img.active {
+    opacity: 1;
+  }
+  .project-card h3 {
+    padding: 1rem;
+    font-size: 1.2rem;
+    background-color: #f1f1f1;
+    margin: 0;
+    text-align: center;
+  }
 
-    .background-animation dotlottie-player {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      opacity: 0.15;
-    }
+  .modal {
+    padding: 0rem 0rem 0rem 0rem; /* TOP RIGHT BOTTOM LEFT */
+    display: none;
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none; /* Disable clicking while hidden */
+  }
 
-    header {
-      background: linear-gradient(to right, #001b7a 0%, #0021A5 50%, #0038D1 100%);
-      padding: 1rem;
-      text-align: center;
-      position: relative;
-      z-index: 1;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-      border-bottom: 2px solid rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(6px);
-    }
+  .modal-image {
+    width: 100%;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
 
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-      font-weight: 700;
-    }
-
-    header h1::after {
-      content: "";
-      display: block;
-      margin: 0.4rem auto 0;
-      width: 150px;
-      height: 3px;
-      background: #FA4616;
-      border-radius: 999px;
-      opacity: 0.8;
-    }
-
-    nav {
-      margin-top: 0.5rem;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 1rem;
-      font-weight: 500;
-    }
-
-    nav a:hover {
-      color: #FFCC00;
-    }
-
-    main {
-      padding: 0rem 2rem 10rem 2rem;
-      max-width: 1200px;
-      margin: auto;
-      position: relative;
-      z-index: 1;
-    }
-
-    .section-header {
-      text-align: left;
-      font-size: 1.8rem;
-      padding: 3rem 0rem 1rem 0rem;
-      margin: 1rem;
-      font-weight: 700;
-    }
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-      gap: 2rem;
-    }
-    .project-card {
-      background: #ffffff;
-      color: #000;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      position: relative;
-    }
-    .project-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-    }
-    .carousel {
-      position: relative;
-      width: 100%;
-      height: 350px; /* 🔥 made carousel taller */
-      overflow: hidden;
-    }
-    .carousel img {
-      width: 100%;
-      height: 350px; /* 🔥 match image height */
-      object-fit: cover;
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-    }
-    .carousel img.active {
-      opacity: 1;
-    }
-    .project-card h3 {
-      padding: 1rem;
-      font-size: 1.2rem;
-      background-color: #f1f1f1;
-      margin: 0;
-      text-align: center;
-    }
-
-    .modal {
-      padding: 0rem 0rem 0rem 0rem; /* TOP RIGHT BOTTOM LEFT */
-      display: none;
-      position: fixed;
-      z-index: 2000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.8);
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      pointer-events: none; /* Disable clicking while hidden */
-    }
-
-    .modal-image {
-      width: 100%;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    .modal-image img {
-      max-width: 100%;
-      max-height: 300px; /* optional height limit */
-      height: auto;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
+  .modal-image img {
+    max-width: 100%;
+    max-height: 300px; /* optional height limit */
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  }
 
 
-    .modal.show {
-      display: block;
-      opacity: 1;
-      pointer-events: auto; /* Allow clicks once shown */
-    }
+  .modal.show {
+    display: block;
+    opacity: 1;
+    pointer-events: auto; /* Allow clicks once shown */
+  }
 
-    .modal-content {
-      background-color: #fff;
-      color: #000;
-      margin: 5% auto;
-      padding: 1.5rem 1rem 2rem 1rem;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 700px;
-      position: relative;
-      max-height: 90vh; /* 🔥 Cap the modal height */
-      overflow-y: auto; /* 🔥 Make it scroll if too tall */
-      box-sizing: border-box;
-      transform: scale(0.95);
-      opacity: 0;
-      transition: transform 0.3s ease, opacity 0.3s ease;
-    }
+  .modal-content {
+    background-color: #fff;
+    color: #000;
+    margin: 5% auto;
+    padding: 1.5rem 1rem 2rem 1rem;
+    border-radius: 12px;
+    width: 90%;
+    max-width: 700px;
+    position: relative;
+    max-height: 90vh; /* 🔥 Cap the modal height */
+    overflow-y: auto; /* 🔥 Make it scroll if too tall */
+    box-sizing: border-box;
+    transform: scale(0.95);
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
 
-    .modal.show .modal-content {
-      transform: scale(1);
-      opacity: 1;
-    }
+  .modal.show .modal-content {
+    transform: scale(1);
+    opacity: 1;
+  }
 
-    .close {
-      color: #000;
-      position: absolute;
-      top: 1rem;
-      right: 1.2rem;
-      font-size: 1.8rem;
-      font-weight: bold;
-      cursor: pointer;
-      z-index: 10;
-    }
+  .close {
+    color: #000;
+    position: absolute;
+    top: 1rem;
+    right: 1.2rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10;
+  }
 
-    .close:hover {
-      color: #000;
-    }
+  .close:hover {
+    color: #000;
+  }
 
-    body {
-      overscroll-behavior: none;
-    }
+  body {
+    overscroll-behavior: none;
+  }
 
-    /* Sub-header centered */
-    .sub-header {
-      text-align: center;
-    }
+  /* Sub-header centered */
+  .sub-header {
+    text-align: center;
+  }
 
+  @media (max-width: 768px) {
+  .projects-grid {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 
-/* Desktop view adjustments */
-@media (min-width: 769px) {
-      header h1 {
-        padding: 0rem 0rem 1rem 0rem; /* TOP RIGHT BOTTOM LEFT */
-      }
-      .nav-links a {
-        color: white;
-        text-decoration: none;
-        font-weight: 500;
-        transition: color 0.3s ease;
-        padding: 1rem 3rem; /* Top/Bottom: 1.5rem, Left/Right: 1rem */
-        width: 100%;
-        text-align: center;
-      }
+  .section-header {
+    text-align: center;
+  }
 
-      .nav-links a:hover {
-        color: #FF5349;
-      }
+  .carousel, .carousel img {
+    height: 200px;
+  }
 
-      .menu-toggle {
-        display: none;
-      }
-    }
+  .modal-content {
+    padding: 1rem 1rem 2rem 1rem;
+    max-height: 85vh;
+  }
 
-    @media (max-width: 768px) {
-    .projects-grid {
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    }
+  .modal-image img {
+    max-height: 220px;
+  }
 
-    .section-header {
-      text-align: center;
-    }
-
-    .carousel, .carousel img {
-      height: 200px;
-    }
-
-    .modal-content {
-      padding: 1rem 1rem 2rem 1rem;
-      max-height: 85vh;
-    }
-
-    .modal-image img {
-      max-height: 220px;
-    }
-
-    .close {
-      top: 0.5rem;     /* lower than default */
-      right: 0.8rem;   /* closer to edge */
-      font-size: 1.6rem;
-    }
-
-    /* Navigation Adjustments */
-    nav {
-      margin-top: 0.5rem;
-    }
-
-    header {
-      background: rgba(0, 33, 165, 0.9);
-      height: 70px;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 10;
-    }
-
-    .header-container {
-      width: 100%;
-      max-width: 1200px;
-      position: relative;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .menu-toggle {
-      position: absolute;
-      top: 47%;
-      left: 0.5rem;
-      transform: translateY(-50%);
-      font-size: 2rem;
-      color: #fff;
-      cursor: pointer;
-      z-index: 20;
-    }
-
-    h1 {
-      font-size: 1.8rem;
-      font-weight: 700;
-      color: white;
-      margin: 0;
-    }
-
-    /* Mobile Dropdown Menu */
-    .nav-links {
-      position: absolute;
-      top: 125%;
-      left: 0;
-      right: 0;
-      margin: 0 auto;
-      width: 75%;
-      background: rgba(0, 33, 165, 0.7);
-      backdrop-filter: blur(6px);
-      border-radius: 15px;
-      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      overflow: hidden;
-      max-height: 0;
-      opacity: 0;
-      transition: max-height 0.5s ease, opacity 0.5s ease;
-      z-index: 5;
-    }
-
-    .nav-links.active {
-      max-height: 500px;
-      opacity: 1;
-    }
-
-    .nav-links a {
-      padding: 1rem 1rem;
-      width: 100%;
-      text-align: center;
-      text-decoration: none;
-      color: white;
-      font-weight: 500;
-      border-top: 1px solid rgba(255, 255, 255, 0.15);
-      transition: color 0.3s ease;
-    }
-
-    .nav-links a:first-child {
-      border-top: none;
-    }
-
-    .nav-links a:hover {
-      color: #FF5349;
-    }
+  .close {
+    top: 0.5rem;     /* lower than default */
+    right: 0.8rem;   /* closer to edge */
+    font-size: 1.6rem;
+  }
 }
 
-@keyframes fadeUp {
-  from {
+  .fade-in {
     opacity: 0;
     transform: translateY(30px);
   }
-  to {
-    opacity: 1;
-    transform: translateY(0);
+
+  .appear {
+    animation: fadeUp 0.8s ease forwards;
   }
-}
-
-.fade-in {
-  opacity: 0;
-  transform: translateY(30px);
-}
-
-.appear {
-  animation: fadeUp 0.8s ease forwards;
-}
 
 </style>
 </head>
 
 <body>
 
-<!-- Background animation -->
-<div class="background-animation">
+<div class="background-animation rotated-mobile-animation">
   <dotlottie-player 
     src="https://lottie.host/7f862c30-c5ec-4829-a248-895fbce816c2/mRheNRO0yJ.lottie" 
     background="transparent" 
