Quick inforamtion fixes

--- a/projects.html
+++ b/projects.html
@@ -347,7 +347,7 @@
     },
     {
       title: "MIPS-like Microprocessor Design",
-      subheader: "(Course Project — Spring 2023)",
+      subheader: "(Course Project — Fall 2022)",
       desc: `I designed, simulated, and implemented a custom 32-bit MIPS-like microprocessor in VHDL, including a full CPU datapath, ALU, memory module, and memory-mapped I/O. The project covered instruction fetch, decode, and execute cycles for R-type, I-type, and J-type instructions, with full support for branching and jumping. The processor was validated through comprehensive testbenches and synthesized on FPGA hardware.`,
       skills: "VHDL, CPU Architecture, RTL Design, FSM Controller Design, FPGA Prototyping",
       image: "images/mips_project_2.PNG"
@@ -368,7 +368,7 @@
     },
     {
       title: "Pontiac Fiero Engine Restoration",
-      subheader: "(Personal Engineering Project — 2023)",
+      subheader: "(Personal Engineering Project — 2020)",
       desc: `I restored a Pontiac Fiero that had been non-functional for over seven years, systematically diagnosing and repairing critical engine components. My work included replacing vacuum lines, fuel injectors, ignition system components, and valve cover gasket, performing an EGR delete, and reprogramming the PROM chip to lower idle RPMs and solve overheating issues. This project demonstrated mechanical system troubleshooting, real-world engineering diagnostics, and custom system modifications.`,
       skills: "Diagnostics, Systems Engineering, Control Systems, Mechanical Repair, Automotive Electronics",
       image: "images/fiero.gif"
@@ -389,21 +389,21 @@
     },
     {
       title: "Applied ML: Dempster-Shafer Fusion",
-      subheader: "(Capstone Project — Spring 2024)",
+      subheader: "(Capstone Project — Fall 2024)",
       desc: `I developed and benchmarked classification models enhanced with Dempster-Shafer Theory to improve predictions under uncertainty. I worked with the UCSD ExtraSensory dataset, implemented multithreaded fusion pipelines, and evaluated performance across multiple models. This project emphasized uncertainty modeling and multi-model decision integration.`,
       skills: "Python, Machine Learning, Information Fusion, Uncertainty Modeling, Multithreading",
       image: "images/ds_flowchart.jpg"
     },
     {
       title: "Flower Species Classification",
-      subheader: "(Machine Learning Project — Spring 2024)",
+      subheader: "(Machine Learning Project — Fall 2023)",
       desc: `I built a flower species classifier using TensorFlow and transfer learning with the InceptionV3 architecture, achieving near 100% accuracy on a 10-class flower dataset. Techniques included model fine-tuning, hyperparameter optimization, and image data augmentation to maximize performance.`,
       skills: "Python, TensorFlow, Deep Learning, Transfer Learning, Image Classification",
       image: "images/flower_id.PNG"
     },
     {
       title: "API Automation Tools (Python Bots)",
-      subheader: "(Personal Software Projects — 2024)",
+      subheader: "(Personal Software Projects — Fall 2024)",
       desc: `I developed multiple Python automation tools that interact with external APIs, including a Telegram bot and a Twitter bot. The Telegram bot handled asynchronous user messages and retrieved jokes dynamically from an online database, while the Twitter bot used OAuth 1.0a secure authentication to post tweets programmatically. These projects strengthened my understanding of RESTful APIs, asynchronous programming, secure web authentication, and JSON-based data exchanges.`,
       skills: "Python, REST APIs, OAuth Authentication, Asynchronous Programming, JSON Data Handling, Web Automation",
       image: "images/python_logo.jpg"
