--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   }
 
+  .degree {
+    font-style: italic;
+    font-weight: bold;
+    font-size: .4rem;
+    color: #000000;
+    animation: fadeIn .5s ease-out forwards;
+    opacity: 0;
+  }
+
   .tagline {
     font-size: .4rem;
     color: #000000;
@@ -225,8 +234,9 @@
       </a>
     </div>      
   
+    <p class="degree">BSEE May 2025</p>
     <p class="tagline">RTL Design | Verification |  FPGA Engineer</p>
-    <h2>About Me</h2>
+    <h2>Justin Coppola</h2>
     <p>Welcome to my personal portfolio website. I am passionate about semiconductor logic, driven by a desire to solve complex problems at the hardware level. I specialize in RTL design, SystemVerilog development, Python scripting and digital verification. I'm eager to apply my experience building production-ready IP and my passion for digital systems to help shape the future of semiconductor technology.</p>
     <a href="projects.html" class="cta-button fade-in-projects">See My Projects</a>
 
