--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </a>
     </div>      
   
-    <p class="degree">BSEE May 2025</p>
+    <p class="degree">Bachelor of Science in Elecrical Engineering<br>May 2025</p>
     <p class="tagline">RTL Design | Verification |  FPGA Engineer</p>
     <h2>Justin Coppola</h2>
     <p>Welcome to my personal portfolio website. I am passionate about semiconductor logic, driven by a desire to solve complex problems at the hardware level. I specialize in RTL design, SystemVerilog development, Python scripting and digital verification. I'm eager to apply my experience building production-ready IP and my passion for digital systems to help shape the future of semiconductor technology.</p>
