--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
   .degree {
     font-style: italic;
     font-weight: bold;
-    font-size: .4rem;
+    font-size: 1.2rem;
     color: #000000;
     animation: fadeIn .5s ease-out forwards;
     opacity: 0;
   }
 
   .tagline {
-    font-size: .4rem;
+    font-size: 1rem;
     color: #000000;
     margin-top: 0.5rem;
     animation: fadeIn .5s ease-out forwards;
@@ -86,7 +86,6 @@
 
   .about-me p {
     margin-bottom: 2rem;      
-    font-size: 1rem;
     line-height: 1.8;
     letter-spacing: 0.2px;
   }
@@ -168,9 +167,10 @@
     font-size: 1.5rem;
   }
 
-  .about-me p {
-    font-size: 1rem;
+  .degree {
+    font-size: .9rem;
   }
+
 
   .profile-wrapper {
     flex-direction: column;
