--- a/projects.html
+++ b/projects.html
@@ -494,6 +494,16 @@
       }, 3000);
     });
   </script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLQVZG7C15"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KLQVZG7C15');
+</script>
   
   </body>
   </html>
