--- a/projects.html
+++ b/projects.html
@@ -341,63 +341,63 @@
     { 
       title: "Intel RTL Sub-IP Design",
       subheader: "(Internship Project — Summer 2024)",
-      desc: `During my internship at Intel, I designed a new RTL sub-IP critical for debug and functional register control on next-generation CPUs. I reverse-engineered legacy systems, adapted designs for new industry-standard tools, and implemented robust logic in SystemVerilog with thorough assertion-based testing. The final IP improved test reliability and enabled Intel to transition away from unsupported DFT tools, saving significant engineering time.`,
+      desc: `During my internship at Intel, I designed a new RTL sub-IP critical for debug and functional register control on next-generation CPUs. I reverse-engineered legacy systems, adapted designs for new industry-standard tools and implemented robust logic in SystemVerilog with thorough assertion-based testing. The final IP improved test reliability and enabled Intel to transition away from unsupported DFT tools, saving significant engineering time.`,
       skills: "SystemVerilog, RTL Design, Assertions, EDA Tools, Linux Automation",
-      image: "images/intel_logo.gif" // ← new image just for the modal
+      image: "images/intel_logo.gif"
     },
     {
-      title: "MIPS-like Microprocessor Design",
+      title: "MIPS Microprocessor Design",
       subheader: "(Course Project — Fall 2022)",
-      desc: `I designed, simulated, and implemented a custom 32-bit MIPS-like microprocessor in VHDL, including a full CPU datapath, ALU, memory module, and memory-mapped I/O. The project covered instruction fetch, decode, and execute cycles for R-type, I-type, and J-type instructions, with full support for branching and jumping. The processor was validated through comprehensive testbenches and synthesized on FPGA hardware.`,
+      desc: `I designed, simulated, and implemented a custom 32-bit MIPS-like microprocessor in VHDL, including a full CPU datapath, ALU, memory module and memory-mapped I/O. The project covered instruction fetch, decode and execute cycles for R-type, I-type, and J-type instructions, with full support for branching and jumping. The processor was validated through comprehensive testbenches and synthesized on FPGA hardware.`,
       skills: "VHDL, CPU Architecture, RTL Design, FSM Controller Design, FPGA Prototyping",
       image: "images/mips_project_2.PNG"
     },
     {
       title: "SoC Design for Autonomous Car",
       subheader: "(Course Project — Spring 2024)",
-      desc: `As part of a System-on-Chip design course, I led the development of an autonomous vehicle capable of lane detection and self-navigation. I built the real-time image processing pipeline using Python and OpenCV, and designed the hardware steering control logic in SystemVerilog to drive the car based on lane data. This project demonstrated cross-disciplinary integration between embedded software and digital RTL design.`,
+      desc: `I led the development of an autonomous vehicle capable of lane detection and self-navigation. I built the real-time image processing pipeline using Python and OpenCV, and designed the hardware steering control logic in SystemVerilog to drive the car based on lane data. This project demonstrated cross-disciplinary integration between embedded software and digital RTL design.`,
       skills: "Python, OpenCV, SystemVerilog, SoC Design, Embedded Systems",
       image: "images/soc_camera_car.jpg"
     },
     {
       title: "Pong Game on FPGA",
       subheader: "(Course Project — Spring 2024)",
-      desc: `I implemented a real-time Pong game using Verilog on the Pynq-Z2 FPGA board, involving HDMI video output generation, paddle and ball logic, and real-time user controls via pushbuttons. I modified HDL modules, created a custom Scoreboard module, and managed multi-clock domain timing using MMCM-generated clocking IP. This project strengthened my skills in modular Verilog design and timing-critical FPGA systems.`,
+      desc: `I implemented a real-time Pong game using Verilog on the Pynq-Z2 FPGA board with HDMI video output generation, paddle and ball logic, and real-time user controls via pushbuttons. I modified HDL modules, created a custom Scoreboard module, and managed multi-clock domain timing using MMCM-generated clocking IP. This project strengthened my skills in modular Verilog design and timing-critical FPGA systems.`,
       skills: "Verilog, FPGA Design, HDMI Output, IP Core Integration, Clock Management",
        image: "images/pong.gif"
     },
     {
-      title: "Pontiac Fiero Engine Restoration",
+      title: "Pontiac Fiero Restoration",
       subheader: "(Personal Engineering Project — 2020)",
-      desc: `I restored a Pontiac Fiero that had been non-functional for over seven years, systematically diagnosing and repairing critical engine components. My work included replacing vacuum lines, fuel injectors, ignition system components, and valve cover gasket, performing an EGR delete, and reprogramming the PROM chip to lower idle RPMs and solve overheating issues. This project demonstrated mechanical system troubleshooting, real-world engineering diagnostics, and custom system modifications.`,
+      desc: `I restored a Pontiac Fiero that had been non-functional for over seven years, systematically diagnosing and repairing critical engine components. My work included replacing vacuum lines, fuel injectors, ignition system components, the valve cover gasket. I also performed an EGR delete and replaced the ECU's PROM chip to lower idle RPMs and solve overheating issues. This project demonstrated mechanical system troubleshooting and real-world engineering diagnostics.`,
       skills: "Diagnostics, Systems Engineering, Control Systems, Mechanical Repair, Automotive Electronics",
       image: "images/fiero.gif"
     },
     {
-      title: "Roulette Game on Microcontroller",
+      title: "Raspberry Pi Roulette",
       subheader: "(Course Project — Spring 2024)",
-      desc: `I designed and built a microcontroller-based roulette game using a custom PCB and Raspberry Pi Pico. The system featured real-time user input, randomized LED spinning, LCD score display, and speaker output driven by DAC-generated analog signals. This project integrated digital design, analog control, PCB layout, and real-time software development.`,
+      desc: `I designed and built a microcontroller-based roulette game using a custom PCB and Raspberry Pi Pico. The system featured real-time user input, randomized LED spinning, LCD score display and speaker output driven by DAC-generated analog signals. This project integrated digital design, analog control, PCB layout and real-time software development.`,
       skills: "Embedded Systems, PCB Design, DAC Programming, Microcontroller Development, Circuit Debugging",
       image: "images/full_diagram.png"
     },
     {
       title: "DAC Waveform Generator & USART Piano",
       subheader: "(Lab Project — Spring 2023)",
-      desc: `I developed a complete software and hardware system to generate dynamic analog waveforms using a microcontroller’s DAC and DMA, extending it into a USART-controlled digital piano. The project involved building waveform lookup tables, managing event-driven DMA transfers, and real-time user-driven note selection over USART.`,
+      desc: `I developed a complete software and hardware system to generate dynamic analog waveforms using a microcontroller’s DAC and DMA, extending it into a USART-controlled digital piano. The project involved building waveform lookup tables, managing event-driven DMA transfers and real-time user-driven note selection over USART.`,
       skills: "Embedded C Programming, DAC Control, DMA Usage, USART Communication, Real-Time Systems",
       image: "images/up.jpg"
     },
     {
       title: "Applied ML: Dempster-Shafer Fusion",
       subheader: "(Capstone Project — Fall 2024)",
-      desc: `I developed and benchmarked classification models enhanced with Dempster-Shafer Theory to improve predictions under uncertainty. I worked with the UCSD ExtraSensory dataset, implemented multithreaded fusion pipelines, and evaluated performance across multiple models. This project emphasized uncertainty modeling and multi-model decision integration.`,
+      desc: `I developed and benchmarked classification models enhanced with Dempster-Shafer Theory to improve predictions under uncertainty. I worked with the UCSD ExtraSensory dataset, implemented multithreaded fusion pipelines and evaluated performance across multiple models. This project emphasized uncertainty modeling and multi-model decision integration.`,
       skills: "Python, Machine Learning, Information Fusion, Uncertainty Modeling, Multithreading",
       image: "images/ds_flowchart.jpg"
     },
     {
       title: "Flower Species Classification",
       subheader: "(Machine Learning Project — Fall 2023)",
-      desc: `I built a flower species classifier using TensorFlow and transfer learning with the InceptionV3 architecture, achieving near 100% accuracy on a 10-class flower dataset. Techniques included model fine-tuning, hyperparameter optimization, and image data augmentation to maximize performance.`,
+      desc: `I built a flower species classifier using TensorFlow and transfer learning with the InceptionV3 architecture, achieving near 100% accuracy on a 10-class flower dataset. Techniques included model fine-tuning, hyperparameter optimization and image data augmentation to maximize performance.`,
       skills: "Python, TensorFlow, Deep Learning, Transfer Learning, Image Classification",
       image: "images/flower_id.PNG"
     },
