--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <img src="images/github_icon.png" alt="GitHub Icon" class="icon">
       </a>
   
-      <img src="images/headshot.jpg" alt="Profile Image" class="profile-image">
+      <img src="images/headshot.JPEG" alt="Profile Image" class="profile-image">
   
       <a href="https://linkedin.com/in/justin-coppola" target="_blank" class="social-button desktop-only fade-in-delay-2">
         <img src="images/linkedin_icon.png" alt="LinkedIn Icon" class="icon"> 
